feat: add create coupon method
